--- a/manifest.json
+++ b/manifest.json
@@ -4,13 +4,28 @@
   "description": "Minimal todo app for minimalist",
   "short_name": "ng-Todo",
   "version": "0.1",
-  "browser_action": {
-    "default_popup": "index.html",
-    "default_icon": "images/logo.png"
+  "background": {
+    "scripts": [
+      "node_modules/axios/dist/axios.js",
+      "background.js"
+    ]
   },
   "permissions": [
-    "debugger",
     "storage"
   ],
-  "content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'"
+  "content_scripts": [
+    {
+      "js": [
+        "content-script.js"
+      ],
+      "matches": [
+        "*://*/*"
+      ]
+    }
+  ],
+  "web_accessible_resources": [
+    "index.html",
+    "package.json"
+  ],
+  "content_security_policy": "default-src 'none'; connect-src https://*.ebay.com/ http://*.ebay.com/"
 }
