--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "UNLICENSED",
   "dependencies": {
     "angular": "^1.5.9",
+    "axios": "^0.15.3",
     "bootstrap": "^3.3.7",
     "jquery": "^3.1.1"
   },
