--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "load-grunt-config": "^0.19.2",
     "lodash": "^4.17.2",
     "mocha": "^3.2.0",
+    "morgan": "^1.7.0",
     "ng-annotate-loader": "^0.2.0",
     "node-sass": "^3.13.0",
     "raw-loader": "^0.5.1",
