--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jquery": "^3.1.1"
   },
   "devDependencies": {
+    "csp-parse": "0.0.2",
     "css-loader": "^0.26.0",
     "eslint": "^3.12.2",
     "eslint-config-angular": "^0.5.0",
@@ -37,6 +38,7 @@
     "html-webpack-exclude-assets-plugin": "0.0.3",
     "html-webpack-plugin": "^2.24.1",
     "istanbul": "^0.4.5",
+    "jsonfile": "^2.4.0",
     "load-grunt-config": "^0.19.2",
     "lodash": "^4.17.2",
     "mocha": "^3.2.0",
