--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "grunt-mocha-istanbul": "^5.0.2",
     "grunt-nodemon": "^0.4.2",
     "grunt-webpack": "^1.0.18",
+    "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.24.1",
     "istanbul": "^0.4.5",
     "jsonfile": "^2.4.0",
@@ -43,8 +44,8 @@
     "mocha": "^3.2.0",
     "morgan": "^1.7.0",
     "ng-annotate-loader": "^0.2.0",
+    "ngtemplate-loader": "^1.3.1",
     "node-sass": "^3.13.0",
-    "raw-loader": "^0.5.1",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "time-grunt": "^1.4.0",
