--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "UNLICENSED",
   "dependencies": {
     "angular": "^1.6.0",
+    "angular-translate": "^2.13.1",
     "axios": "^0.15.3",
     "bootstrap": "^3.3.7",
     "jquery": "^3.1.1"
@@ -46,6 +47,7 @@
     "ng-annotate-loader": "^0.2.0",
     "ngtemplate-loader": "^1.3.1",
     "node-sass": "^3.13.0",
+    "properties-loader": "0.0.1",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "time-grunt": "^1.4.0",
