--- a/test/.eslintrc
+++ b/test/.eslintrc
@@ -9,5 +9,12 @@
     "browser": true,
     "node": true,
     "mocha": true
+  },
+  "globals": {
+    "sinon": true,
+    "expect": true,
+    "chai": true,
+    "angular": true,
+    "inject": true
   }
 }
