--- a/package.json
+++ b/package.json
@@ -12,10 +12,17 @@
     "angular": "^1.6.0",
     "angular-translate": "^2.13.1",
     "axios": "^0.15.3",
+    "bluebird": "^3.4.7",
     "bootstrap": "^3.3.7",
     "jquery": "^3.1.1"
   },
   "devDependencies": {
+    "angular-mocks": "^1.6.1",
+    "babel-core": "^6.21.0",
+    "babel-loader": "^6.2.10",
+    "babel-plugin-istanbul": "^3.1.2",
+    "babel-preset-es2015": "^6.18.0",
+    "chai": "^3.5.0",
     "csp-parse": "0.0.2",
     "css-loader": "^0.26.0",
     "eslint": "^3.12.2",
@@ -33,13 +40,23 @@
     "grunt-concurrent": "^2.3.1",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-eslint": "^19.0.0",
-    "grunt-mocha-istanbul": "^5.0.2",
+    "grunt-karma": "^2.0.0",
     "grunt-nodemon": "^0.4.2",
     "grunt-webpack": "^1.0.18",
     "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.24.1",
     "istanbul": "^0.4.5",
+    "jasmine-core": "^2.5.2",
     "jsonfile": "^2.4.0",
+    "karma": "^1.3.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-coverage": "^1.1.1",
+    "karma-jasmine": "^1.1.0",
+    "karma-mocha": "^1.3.0",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-sinon-chai": "^1.2.4",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^1.8.1",
     "load-grunt-config": "^0.19.2",
     "lodash": "^4.17.2",
     "mocha": "^3.2.0",
@@ -49,6 +66,8 @@
     "node-sass": "^3.13.0",
     "properties-loader": "0.0.1",
     "sass-loader": "^4.0.2",
+    "sinon": "^1.17.7",
+    "sinon-chai": "^2.8.0",
     "style-loader": "^0.13.1",
     "time-grunt": "^1.4.0",
     "url-loader": "^0.5.7",
