--- a/package.json
+++ b/package.json
@@ -50,7 +50,6 @@
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-coverage": "^1.1.1",
-    "karma-jasmine": "^1.1.0",
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-sinon-chai": "^1.2.4",
@@ -67,6 +66,7 @@
     "sass-loader": "^4.0.2",
     "sinon": "^1.17.7",
     "sinon-chai": "^2.8.0",
+    "stacktrace-js": "^1.3.1",
     "style-loader": "^0.13.1",
     "time-grunt": "^1.4.0",
     "url-loader": "^0.5.7",
