--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "UNLICENSED",
   "dependencies": {
     "angular": "^1.6.0",
+    "angular-bluebird-promises": "^1.0.2",
     "angular-translate": "^2.13.1",
     "axios": "^0.15.3",
     "bluebird": "^3.4.7",
