--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-loader": "^6.2.10",
     "babel-plugin-istanbul": "^3.1.2",
     "babel-preset-es2015": "^6.18.0",
+    "body-parser": "^1.15.2",
     "chai": "^3.5.0",
     "csp-parse": "0.0.2",
     "css-loader": "^0.26.0",
@@ -42,6 +43,7 @@
     "grunt-contrib-clean": "^1.0.0",
     "grunt-eslint": "^19.0.0",
     "grunt-karma": "^2.0.0",
+    "grunt-mocha-istanbul": "^5.0.2",
     "grunt-nodemon": "^0.4.2",
     "grunt-webpack": "^1.0.18",
     "html-loader": "^0.4.4",
@@ -64,6 +66,7 @@
     "ngtemplate-loader": "^1.3.1",
     "node-sass": "^3.13.0",
     "properties-loader": "0.0.1",
+    "proxyquire": "^1.7.10",
     "sass-loader": "^4.0.2",
     "sinon": "^1.17.7",
     "sinon-chai": "^2.8.0",
