--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.15.3",
     "bluebird": "^3.4.7",
     "bootstrap": "^3.3.7",
+    "error-stack-parser": "^2.0.0",
     "jquery": "^3.1.1"
   },
   "devDependencies": {
@@ -70,7 +71,6 @@
     "sass-loader": "^4.0.2",
     "sinon": "^1.17.7",
     "sinon-chai": "^2.8.0",
-    "stacktrace-js": "^1.3.1",
     "style-loader": "^0.13.1",
     "time-grunt": "^1.4.0",
     "url-loader": "^0.5.7",
