--- a/package.json
+++ b/package.json
@@ -4,27 +4,83 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "grunt": "./node_modules/.bin/grunt"
   },
   "author": "",
   "license": "UNLICENSED",
   "dependencies": {
-    "angular": "^1.5.9",
-    "bootstrap": "^3.3.7",
-    "jquery": "^3.1.1"
+    "axios": "^0.16.2",
+    "bootstrap-vue": "^1.0.0-beta.7",
+    "lodash.merge": "^4.6.0",
+    "vue": "^2.4.2",
+    "vue-i18n": "^7.2.0",
+    "vue-router": "^2.7.0",
+    "vuex": "^2.4.0",
+    "vuex-router-sync": "^4.3.1"
   },
   "devDependencies": {
-    "css-loader": "^0.26.0",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.9.0",
-    "less": "^2.7.1",
-    "less-loader": "^2.2.3",
-    "ng-annotate-loader": "^0.2.0",
-    "node-sass": "^3.13.0",
-    "raw-loader": "^0.5.1",
-    "sass-loader": "^4.0.2",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.13.3"
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^7.2.3",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-istanbul": "^4.1.4",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "body-parser": "^1.17.2",
+    "chai": "^4.1.2",
+    "csp-parse": "^0.0.2",
+    "css-loader": "^0.28.7",
+    "enhanced-properties-loader": "^1.4.0",
+    "eslint": "^4.6.1",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-mocha": "^4.11.0",
+    "eslint-plugin-node": "^5.1.1",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "eslint-plugin-vue": "beta",
+    "express": "^4.15.4",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^0.11.2",
+    "grunt": "^1.0.1",
+    "grunt-cli": "^1.2.0",
+    "grunt-concurrent": "^2.3.1",
+    "grunt-contrib-clean": "^1.1.0",
+    "grunt-contrib-compress": "^1.4.3",
+    "grunt-env": "^0.4.4",
+    "grunt-eslint": "^20.1.0",
+    "grunt-mocha-istanbul": "^5.0.2",
+    "grunt-nodemon": "^0.4.2",
+    "grunt-webpack": "^3.0.2",
+    "html-loader": "^0.5.1",
+    "html-webpack-harddisk-plugin": "^0.1.0",
+    "html-webpack-plugin": "^2.30.1",
+    "istanbul": "^0.4.5",
+    "json-loader": "^0.5.7",
+    "jsonfile": "^3.0.1",
+    "load-grunt-config": "^0.19.2",
+    "lodash.assignin": "^4.2.0",
+    "lodash.clonedeep": "^4.5.0",
+    "mocha": "^3.5.0",
+    "morgan": "^1.8.2",
+    "node-sass": "^4.5.3",
+    "optimize-css-assets-webpack-plugin": "^3.2.0",
+    "proxyquire": "^1.8.0",
+    "sass-loader": "^6.0.6",
+    "sinon": "^3.2.1",
+    "sinon-chai": "^2.13.0",
+    "style-loader": "^0.18.2",
+    "time-grunt": "^1.4.0",
+    "uglifyjs-webpack-plugin": "^1.0.0-beta.2",
+    "url-loader": "^0.5.9",
+    "vue-loader": "^13.0.4",
+    "vue-template-compiler": "^2.4.2",
+    "webpack": "^3.5.6",
+    "webpack-dev-server": "^2.7.1",
+    "webpack-merge": "^4.1.0"
   }
 }
