--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "browser-extension",
   "version": "0.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "grunt": "./node_modules/.bin/grunt"
   },
@@ -11,6 +10,8 @@
   "dependencies": {
     "axios": "^0.16.2",
     "bootstrap-vue": "^1.0.0-beta.7",
+    "error-stack-parser": "^2.0.1",
+    "js-logger": "^1.4.1",
     "lodash.merge": "^4.6.0",
     "vue": "^2.4.2",
     "vue-i18n": "^7.2.0",
@@ -27,7 +28,6 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.0",
-    "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.26.0",
     "body-parser": "^1.17.2",
@@ -65,10 +65,12 @@
     "load-grunt-config": "^0.19.2",
     "lodash.assignin": "^4.2.0",
     "lodash.clonedeep": "^4.5.0",
+    "mkdirp": "^0.5.1",
     "mocha": "^3.5.0",
     "morgan": "^1.8.2",
     "node-sass": "^4.5.3",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
+    "properties": "^1.2.1",
     "proxyquire": "^1.8.0",
     "sass-loader": "^6.0.6",
     "sinon": "^3.2.1",
